# LiDAR-SLAM-Simulation

./: .gitattributes  .gitignore  CLAUDE.md  README.md
core/localization/: README.md  fast-lio2.patch
core/localization/gicp_localization/: package.xml
core/localization/gicp_localization/include/gicp_localization/: pose_math.hpp  prior_map.hpp
core/localization/gicp_localization/launch/: localization.launch.py
core/localization/gicp_localization/msg/: GicpDiagnostics.msg
core/localization/gicp_localization/src/: diagnostics_real.cpp  gicp_localization_node.cpp  prior_map.cpp
core/localization/gicp_localization/test/: test_pose_math.cpp  test_prior_map.cpp
core/localization/livox_ros_driver2/: CMakeLists.txt  package.xml
core/localization/livox_ros_driver2/msg/: CustomMsg.msg
core/localization/sim-only/: README.md  disable-deskew-snapshot-lidar.patch
core/mapping/: README.md  lio-sam.patch
core/navigation/: README.md
core/navigation/robot_navigation/: package.xml  setup.py
core/navigation/robot_navigation/config/: nav2.rviz  nav2_params.yaml
core/navigation/robot_navigation/launch/: navigation.launch.py
core/navigation/robot_navigation/robot_navigation/: pcd_to_occupancy.py  twist_stamper.py
core/navigation/robot_navigation/test/: test_nav2_params.py  test_pcd_to_occupancy.py  test_twist_stamper.py
core/robot/robot_bringup/: CMakeLists.txt  package.xml
core/robot/robot_bringup/config/: robot_controllers.yaml
core/robot/robot_bringup/launch/: robot.launch.py
core/robot/robot_description/: CMakeLists.txt  package.xml
core/robot/robot_description/gazebo/: robot.gazebo.xacro
core/robot/robot_description/launch/: view_robot.launch.py
core/robot/robot_description/ros2_control/: robot.ros2_control.xacro
core/robot/robot_description/rviz/: robot.rviz
core/robot/robot_description/test/: test_urdf_xacro.py
core/robot/robot_description/urdf/: robot.materials.xacro  robot.urdf.xacro  robot_macro.urdf.xacro
core/robot/robot_hardware/: CMakeLists.txt  package.xml  robot_hardware.xml
core/robot/robot_hardware/include/robot_hardware/: diff_drive_system.hpp
core/robot/robot_hardware/src/: diff_drive_system.cpp
core/simulation/lidar_pointcloud_adapter/: package.xml  setup.cfg  setup.py
core/simulation/lidar_pointcloud_adapter/lidar_pointcloud_adapter/: adapter_node.py  ring_time.py
core/simulation/lidar_pointcloud_adapter/test/: test_ring_time.py
core/simulation/robot_gz_bringup/: CMakeLists.txt  README.md  package.xml
core/simulation/robot_gz_bringup/config/: bridge.yaml
core/simulation/robot_gz_bringup/launch/: robot_gz.launch.py
core/simulation/robot_gz_bringup/scripts/: convert_classic_world.py  sticky_teleop.py  test_convert_classic_world.py
core/simulation/robot_gz_bringup/worlds/: factory.sdf  lio_world.classic.model  test_world.sdf
core/simulation/spike/: README.md
core/simulation/spike/config/: bridge_spike.yaml
core/simulation/spike/launch/: spike_bringup.launch.py
core/simulation/spike/worlds/: spike_lidar.sdf
docs/: sim-dataflow-lio-sam.md
docs/superpowers/plans/: 2026-06-06-fast-lio2-gazebo-bringup.md
docs/superpowers/specs/: 2026-06-06-fast-lio2-gazebo-bringup-design.md
src/: lio-sam.patch
src/fast-lio2-patch/: 01-add-gazebo-velodyne-config.patch
src/fast-lio2-patch/sim-only/: README.md  disable-deskew-snapshot-lidar.patch
src/gicp_localization/: CMakeLists.txt
src/gicp_localization/config/: gicp_localization.yaml
src/gicp_localization/include/gicp_localization/: diagnostics.hpp  gicp_aligner.hpp  gicp_localization_node.hpp  pose_math.hpp
src/gicp_localization/launch/: localization.launch.py
src/gicp_localization/src/: diagnostics_null.cpp  gicp_aligner.cpp  gicp_localization_node.cpp  main.cpp  pose_math.cpp
src/gicp_localization/test/: test_gicp_aligner.cpp  test_pose_math.cpp  test_prior_map.cpp
src/robot_control/scripts/: robot_control.py
src/robot_description/: CMakeLists.txt
src/robot_description/launch/: robot_launch.py
src/robot_gazebo-patch/: 01-add-use-teleop-switch.patch
src/robot_gazebo/launch/: robot_sim.launch.py
src/robot_navigation/: CMakeLists.txt  package.xml
src/robot_navigation/config/: nav2_costmaps.yaml  nav2_costmaps_stvl.yaml  nav2_navigation.yaml  stage1.rviz  stage2.rviz
src/robot_navigation/launch/: bringup_all.launch.py  stage1_costmaps.launch.py  stage2_navigation.launch.py
src/robot_navigation/test/: test_costmaps_stvl_sync.py  test_nav2_navigation_params.py  test_pcd_to_occupancy.py
src/robot_navigation/tools/: pcd_to_occupancy.py
src/sim_obstacles/: conftest.py  package.xml  setup.cfg  setup.py
src/sim_obstacles/config/: obstacles.yaml
src/sim_obstacles/launch/: dynamic_obstacles.launch.py
src/sim_obstacles/models/: obstacle.sdf.in
src/sim_obstacles/sim_obstacles/: config_loader.py  obstacle_driver.py  oscillation.py  sdf_template.py
src/sim_obstacles/test/: test_config_loader.py  test_oscillation.py  test_sdf_template.py
