<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>livox_ros_driver2</name>
  <version>1.0.0</version>
  <description>
    Minimal messages-only stub of livox_ros_driver2 (CustomMsg/CustomPoint),
    provided only to satisfy FAST-LIO's compile-time type dependency in a
    Velodyne-only setup. Contains no driver and requires no Livox-SDK.
  </description>
  <maintainer email="20twenty.degree@gmail.com">xxf1ow</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
