<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_description</name>
  <version>0.0.0</version>
  <description>差速移动机器人本体描述(参数化 xacro + ros2_control 三态切换 + gazebo 插件标签)，sim/real 通用。</description>
  <maintainer email="20twenty.degree@gmail.com">xxf1ow</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <!-- 三态硬件切换在 ros2_control.xacro 里引用的插件提供者 -->
  <exec_depend>robot_hardware</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>liburdfdom-tools</test_depend>
  <test_depend>xacro</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
