<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_hardware</name>
  <version>0.0.0</version>
  <description>差速机器人真机侧 ros2_control system 硬件接口(velocity 命令 / position+velocity 状态)。移植自 ros2_control_demos example_2。</description>
  <maintainer email="20twenty.degree@gmail.com">xxf1ow</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
